Fixed Keyboard UI Black Keys overlap White Keys

--- a/frontend/src/components/keyboard/Key.css
+++ b/frontend/src/components/keyboard/Key.css
@@ -4,6 +4,7 @@
   font-size: 15px;
 
   border-right: 1px solid rgba(0, 0, 0, 0.75);
+
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   cursor: pointer;
@@ -11,7 +12,7 @@
 }
 
 .key > button:hover {
-  background-color: rgba(0, 0, 155, 0.25);
+  background-color: pink;
   transition: ease-in-out 1ms color;
   color: white;
 }
@@ -26,6 +27,6 @@
 .black-key {
   background-color: black;
   color: white;
-  width: 40px;
-  height: 150px;
+  width: 30px;
+  height: 130px;
 }
